TestSuite/Syntax/Errors/Shift1.tjp
project test "Test" "$Id" 2000-01-01 2000-01-31

shift s1 "Shift1" {
  workinghours wed off
}

shift s1 "Shift2" {
  workinghours mon 10:00 - 17:00
}
